<resources>
    <string name="app_name">platzi1</string>
    <string name="user">Nombre de usuario</string>
    <string name="hint_password">contraseña</string>
    <string name="text_buton_login">LOGIN</string>
    <string name="no_tienes_cuenta">No tienes cuenta?</string>
    <string name="crea_cuenta">Crea cuenta</string>
    <string name="hint_account_usuario">Usuario</string>
    <string name="hint_correo">Correo</string>
    <string name="hint_nombre">Nombre</string>
    <string name="hint_password2">Confirmar contrasena</string>
    <string name="text_buton_aceptar">ACEPTAR</string>
    <string name="crear_cuenta">Crear Cuenta</string>
    <string name="username_card">daniela</string>
    <string name="firstWord_card">Hace</string>
    <string name="timeCard_card">12 dias</string>
    <string name="likeNumbercard">44 Me Gusta</string>
    <string name="tab_search">Buscar</string>
    <string name="tab_home">Inicion</string>
    <string name="tab_profile">Yo</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="menu">Menu</string>
    <string name="action_search">Search</string>
    <string name="action_cart">Cart</string>
    <string name="action_hot_deals">Hot deals</string>

    <string name="search_fragment">Search Fragment</string>
    <string name="cart_fragment">Cart Fragment</string>
    <string name="hot_deals_fragment">Hot Deals Fragment</string>
    <string name="hint_username">Nombre de usuario</string>
   <string name="text_button_login">Login</string>
    <string name="dont_have_account">¿No tienes cuenta?,</string>
    <string name="create_here">crea una aquí</string>
    <string name="hint_email">Correo</string>
    <string name="hint_name">Nombre</string>
    <string name="hint_user">Usuario</string>
    <string name="hint_confirm_password">Confirmar Contraseña</string>
    <string name="text_button_createaccount">Únete</string>
    <string name="toolbar_tittle_createaccount">Crear Cuenta</string>
   >
    <string name="firstword_card">Hace</string>
    <string name="timecard_card">4 días</string>
    <string name="likenumbercard_card">10 Me Gusta</string>

    <string name="secondword_detail">Me Gusta</string>
    <string name="titleimagedetail">\"Todo copas en la playa\"</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="transitionname_picture">transitionnamepicture</string>

</resources>
