<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<item
    android:background="@android:color/black"
    app:bbn_badgeColor="#FFFF0000"
    app:bbn_rippleColor="#33ffffff"
    android:id="@+id/AlvHome"
    android:icon="@drawable/iconhome"
    app:showAsAction="ifRoom"
    android:enabled="true"
    android:title="@string/tab_home"></item>
<item
android:color="@color/colorPrimary"
    android:id="@+id/AlvSearch"
    android:icon="@drawable/iconsearch"
    app:showAsAction="ifRoom"
    android:enabled="true"
    android:title="@string/tab_search"></item>
<item
    android:id="@+id/AlvPerson"
android:color="@android:color/holo_green_dark"
    android:icon="@drawable/iconpereson"
    app:showAsAction="ifRoom"
    android:enabled="true"
    android:title="@string/tab_profile"></item>

</menu>