<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/height_cardviwe"
      >
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_cardviwe"
            android:background="@drawable/iconlike"
            android:scaleType="centerCrop"
            android:id="@+id/cardPicture"
            android:transitionName="@string/transitionname_picture"
            />
        <LinearLayout
            android:background="@color/backroundtextCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="bottom"
            android:paddingLeft="@dimen/activity_h_margin"
            android:paddingBottom="@dimen/activity_h_margin"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/userNameCard"
                android:text="@string/username_card"
                android:textColor="@color/editTextWhite"
                android:textSize="@dimen/letra25"

                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/firstWord"
                    android:text="@string/firstWord_card"
                    android:textColor="@color/editTextWhite"
                    android:textSize="@dimen/letra16"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/timeCard"
                    android:text="@string/timeCard_card"
                    android:textColor="@color/editTextWhite"
                    android:textSize="@dimen/letra16"
                    android:layout_marginLeft="@dimen/timecard_marginleftcard"/>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/like_marginTop_card">
                <CheckBox
                    android:id="@+id/likeCheckCard"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:button="@drawable/checkbox"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/likeNumberCard"
                    android:text="@string/likeNumbercard"
                    android:textColor="@color/editTextWhite"
                    android:textSize="@dimen/letra16"
                    android:layout_marginLeft="@dimen/timecard_marginleftcard"/>
            </LinearLayout>
        </LinearLayout>
    </FrameLayout>

</android.support.v7.widget.CardView>