<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:design="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.dojoandroid.platzi1.MainActivity"
    android:background="@color/colorPrimary">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="1" >
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.4">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:background="@drawable/impulsa_bolivia__logo_01"
                    android:onClick="goWeb"
                    />
            </RelativeLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fillViewport="true">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.6"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="@dimen/fab_margin">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/EditTextWhite">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/username"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/user" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/EditTextWhite">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/password1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_password"
                        android:inputType="textPassword" />
                </android.support.design.widget.TextInputLayout>

                <Button
                    android:id="@+id/login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text_buton_login"
                    android:theme="@style/RisedButtonDark"
                    android:onClick="goContainer"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"

                    >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/no_tienes_cuenta"
                        android:textColor="@color/editTextWhite"
                        android:textSize="@dimen/letra16"
                       />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/crea_cuenta"
                        android:textColor="@color/editTextWhite"
                        android:textSize="@dimen/letra16"

                        android:onClick="goCreateAcoun"/>

                </LinearLayout>
                <android.support.design.widget.BottomNavigationView
                    android:id="@+id/buttomNavigationView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    design:menu="@menu/menu_navigation"
                    android:fitsSystemWindows="true"
                    android:layout_gravity="bottom"
                    android:layout_alignParentBottom="true"
                    app:elevation="@dimen/fab_margin"
                    app:bb_inActiveTabColor="@android:color/white"
                    app:headerLayout="@layout/fragment_home"
                    app:theme="@style/NavigationViewTheme"
                    app:layout_scrollFlags="scroll|enterAlways|snap"
                    app:itemBackground="@color/colorPrimaryDark"
                    app:itemIconTint="@color/editTextWhite"
                    app:itemTextColor="@color/editTextWhite"
                    tools:layout_editor_absoluteY="32dp"
                    tools:layout_editor_absoluteX="8dp" />
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>
